2001-09-12  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-cache-available-p): New function.

2001-09-12  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el, w3m.el: Don't quote colon keywords.

	* Makefile.in (install): Don't install w3mkwds.el.

2001-09-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-colon-keywords): New variable; bind some colon
	keywords for Emacs versions prior to 20.3.

	* .cvsignore: Add w3mkwds.el.

	* w3mhack.el (w3mhack-bind-colon-keywords): New function; byte-
	compile and exec it.
	(w3mhack-examine-modules): Don't byte-compile w3mkwds.el.

	* w3m-macro.el (w3m-tag-regexp-of): Reverted; add a documentation.
	(TopLevel): Require `cl' when compiling.

2001-09-11  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-goto-url): Register post-data and a referer in the
	history.
	(w3m-info-like-map, w3m-lynx-like-map): Use `suppress-keymap'.
	(w3m-view-previous-page): Give post-data and a referer to
	`w3m-goto-url'.
	(w3m-view-next-page): Use `w3m-view-previous-page'.

	* w3m-macro.el (w3m-cleanup-plist): New macro.
	(w3m-tag-regexp-of): Use backquote.

	* w3m-hist.el (w3m-history-modify-properties): Don't infloop.

2001-09-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-clear-local-variables): Not reset `w3m-initial-frame'.
	(w3m-copy-local-variables): Not copy `w3m-initial-frame'.

	* w3m-form.el (w3m-form-parse-region): Modify `w3m-current-forms'
	in this buffer.

2001-09-11  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-expand-url): Use `expand-file-name' to expand path;
	If URL is a form like 'scheme://server/path?query', only path is
	expanded.

2001-09-11  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-meta-content-type-charset-regexp): Relaxed to accept
	<meta> tag in XML style.
	(w3m-meta-charset-content-type-regexp): Ditto.
	(w3m-tag-regexp-of): Exported to `w3m-macro.el'.

	* w3m-macro.el (w3m-tag-regexp-of): Imported from `w3m.el'.
